--- a/gridtypo3.html
+++ b/gridtypo3.html
@@ -119,7 +119,7 @@
       gridTargetSpacing: number;
       gridMode: "Boundary" | "Corners";
       projSmooth: number;
-      projThreshold: number;
+      projK: number;
       projMinDistance: number;
       showContours: boolean;
       contourColor: string;
@@ -166,7 +166,7 @@
       gridTargetSpacing: 0,
       gridMode: "Boundary",
       projSmooth: 5,
-      projThreshold: 0.3,
+      projK: 1,
       projMinDistance: 6,
       showContours: true,
       contourColor: "#3366ff",
@@ -513,8 +513,8 @@
           const projY = projectEdges(edges, false);
           const smoothX = smooth1d(projX, params.projSmooth);
           const smoothY = smooth1d(projY, params.projSmooth);
-          const peaksX = findPeaks(smoothX, params.projThreshold, params.projMinDistance);
-          const peaksY = findPeaks(smoothY, params.projThreshold, params.projMinDistance);
+          const peaksX = findPeaksAuto(smoothX, params.projK, params.projMinDistance);
+          const peaksY = findPeaksAuto(smoothY, params.projK, params.projMinDistance);
           gridXs = params.gridFillMissing
             ? fillMissingLines(peaksX, params.gridTargetSpacing)
             : peaksX;
@@ -677,6 +677,30 @@
       return peaks;
     }
 
+    function findPeaksAuto(values: number[], k: number, minDistance: number): number[] {
+      const stats = meanStd(values);
+      const threshold = stats.mean + k * stats.std;
+      return findPeaks(values, threshold, minDistance);
+    }
+
+    function meanStd(values: number[]): { mean: number; std: number } {
+      if (values.length === 0) {
+        return { mean: 0, std: 0 };
+      }
+      let sum = 0;
+      for (const v of values) {
+        sum += v;
+      }
+      const mean = sum / values.length;
+      let varSum = 0;
+      for (const v of values) {
+        const d = v - mean;
+        varSum += d * d;
+      }
+      const std = Math.sqrt(varSum / values.length);
+      return { mean, std };
+    }
+
     function countPointsNearLine(values: number[], line: number, tolerance: number): number {
       let count = 0;
       for (const value of values) {
@@ -830,7 +854,7 @@
 
       const projFolder = gui.addFolder("Projection");
       projFolder.add(params, "projSmooth", 1, 21, 2).name("projSmooth").onChange(detectAndDraw);
-      projFolder.add(params, "projThreshold", 0.05, 0.9, 0.05).name("projThreshold").onChange(detectAndDraw);
+      projFolder.add(params, "projK", 0.2, 2.5, 0.1).name("projK").onChange(detectAndDraw);
       projFolder.add(params, "projMinDistance", 1, 30, 1).name("projMinDistance").onChange(detectAndDraw);
 
       const contourFolder = gui.addFolder("Contours");
