--- a/gridtypo3.html
+++ b/gridtypo3.html
@@ -121,6 +121,9 @@
       projSmooth: number;
       projK: number;
       projMinDistance: number;
+      gridClipToBoundary: boolean;
+      gridRequireBoundaryHit: boolean;
+      gridHitMargin: number;
       showContours: boolean;
       contourColor: string;
       contourThickness: number;
@@ -144,7 +147,7 @@
     const OPENCV_EMBEDDED_WASM = true;
 
     const params: AppParams = {
-      imagePath: "images/z1.jpg",
+      imagePath: "images",
       imageFile: "z1.jpg",
       mode: "Shi-Tomasi",
       maxCorners: 150,
@@ -165,9 +168,12 @@
       gridFillMissing: true,
       gridTargetSpacing: 0,
       gridMode: "Boundary",
-      projSmooth: 5,
-      projK: 1,
-      projMinDistance: 6,
+      projSmooth: 1,
+      projK: 2.1,
+      projMinDistance: 20,
+      gridClipToBoundary: false,
+      gridRequireBoundaryHit: true,
+      gridHitMargin: 5,
       showContours: true,
       contourColor: "#3366ff",
       contourThickness: 2,
@@ -523,9 +529,28 @@
             : peaksY;
         }
         const gridColor = hexToScalar(params.gridColor, params.gridAlpha);
+        const gridLayer = new cvRef.Mat.zeros(output.rows, output.cols, cvRef.CV_8UC4);
+        const boundaryMask = new cvRef.Mat.zeros(output.rows, output.cols, cvRef.CV_8UC1);
+        const largestIndex = findLargestContourIndex(contours);
+        if (largestIndex >= 0) {
+          cvRef.drawContours(boundaryMask, contours, largestIndex, new cvRef.Scalar(255, 255, 255, 255), -1);
+        }
         for (const x of gridXs) {
+          if (params.gridRequireBoundaryHit && largestIndex >= 0) {
+            const hit = lineHitsBoundaryMask(
+              boundaryMask,
+              x,
+              0,
+              x,
+              output.rows - 1,
+              params.gridHitMargin
+            );
+            if (!hit) {
+              continue;
+            }
+          }
           cvRef.line(
-            output,
+            gridLayer,
             new cvRef.Point(x, 0),
             new cvRef.Point(x, output.rows - 1),
             gridColor,
@@ -533,14 +558,37 @@
           );
         }
         for (const y of gridYs) {
+          if (params.gridRequireBoundaryHit && largestIndex >= 0) {
+            const hit = lineHitsBoundaryMask(
+              boundaryMask,
+              0,
+              y,
+              output.cols - 1,
+              y,
+              params.gridHitMargin
+            );
+            if (!hit) {
+              continue;
+            }
+          }
           cvRef.line(
-            output,
+            gridLayer,
             new cvRef.Point(0, y),
             new cvRef.Point(output.cols - 1, y),
             gridColor,
             params.gridThickness
           );
         }
+        const gridMask = new cvRef.Mat();
+        cvRef.cvtColor(gridLayer, gridMask, cvRef.COLOR_RGBA2GRAY);
+        cvRef.threshold(gridMask, gridMask, 1, 255, cvRef.THRESH_BINARY);
+        if (params.gridClipToBoundary && largestIndex >= 0) {
+          cvRef.bitwise_and(gridMask, boundaryMask, gridMask);
+        }
+        gridLayer.copyTo(output, gridMask);
+        gridMask.delete();
+        gridLayer.delete();
+        boundaryMask.delete();
       }
 
       if (params.showPoints) {
@@ -701,6 +749,61 @@
       return { mean, std };
     }
 
+    function findLargestContourIndex(contoursMat: cv.MatVector): number {
+      let bestIndex = -1;
+      let bestArea = 0;
+      for (let i = 0; i < contoursMat.size(); i += 1) {
+        const contour = contoursMat.get(i);
+        const area = Math.abs(cvRef!.contourArea(contour));
+        contour.delete();
+        if (area > bestArea) {
+          bestArea = area;
+          bestIndex = i;
+        }
+      }
+      return bestIndex;
+    }
+
+    function lineHitsBoundaryMask(
+      mask: cv.Mat,
+      x0: number,
+      y0: number,
+      x1: number,
+      y1: number,
+      margin: number
+    ): boolean {
+      const cols = mask.cols;
+      const rows = mask.rows;
+      const data = mask.data;
+      const steps = Math.max(cols, rows);
+      for (let i = 0; i <= steps; i += 1) {
+        const t = i / steps;
+        const x = Math.round(x0 + (x1 - x0) * t);
+        const y = Math.round(y0 + (y1 - y0) * t);
+        if (x < 0 || y < 0 || x >= cols || y >= rows) {
+          continue;
+        }
+        if (data[y * cols + x] > 0) {
+          return true;
+        }
+        if (margin > 0) {
+          const minX = Math.max(0, x - margin);
+          const maxX = Math.min(cols - 1, x + margin);
+          const minY = Math.max(0, y - margin);
+          const maxY = Math.min(rows - 1, y + margin);
+          for (let yy = minY; yy <= maxY; yy += 1) {
+            const rowOffset = yy * cols;
+            for (let xx = minX; xx <= maxX; xx += 1) {
+              if (data[rowOffset + xx] > 0) {
+                return true;
+              }
+            }
+          }
+        }
+      }
+      return false;
+    }
+
     function countPointsNearLine(values: number[], line: number, tolerance: number): number {
       let count = 0;
       for (const value of values) {
@@ -844,6 +947,9 @@
       const gridFolder = gui.addFolder("Grid");
       gridFolder.add(params, "showGrid").name("showGrid").onChange(detectAndDraw);
       gridFolder.add(params, "gridMode", ["Boundary", "Corners"]).name("gridMode").onChange(detectAndDraw);
+      gridFolder.add(params, "gridClipToBoundary").name("gridClipToBoundary").onChange(detectAndDraw);
+      gridFolder.add(params, "gridRequireBoundaryHit").name("gridRequireBoundaryHit").onChange(detectAndDraw);
+      gridFolder.add(params, "gridHitMargin", 0, 10, 1).name("gridHitMargin").onChange(detectAndDraw);
       gridFolder.addColor(params, "gridColor").name("gridColor").onChange(detectAndDraw);
       gridFolder.add(params, "gridThickness", 1, 6, 1).name("gridThickness").onChange(detectAndDraw);
       gridFolder.add(params, "gridAlpha", 0.1, 1, 0.05).name("gridAlpha").onChange(detectAndDraw);
