--- a/hand_gridtypo1.html
+++ b/hand_gridtypo1.html
@@ -11,8 +11,8 @@
     body {
       margin: 0;
       font-family: "IBM Plex Sans", system-ui, sans-serif;
-      background: #f6f4f0;
-      color: #1b1b1b;
+      background: #363636;
+      color: #e6e6e6;
     }
     .wrap {
       display: grid;
@@ -26,8 +26,8 @@
       gap: 12px;
     }
     .stage {
-      background: #fff;
-      border: 1px solid #ddd;
+      background: #363636;
+      border: 1px solid #5e5e5e;
       border-radius: 10px;
       padding: 12px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
@@ -37,7 +37,8 @@
       height: auto;
       display: block;
       border-radius: 8px;
-      background: #101010;
+      background: #363636;
+      border: 1px solid #5e5e5e;
     }
     .status {
       font-size: 14px;
