--- a/hand_gridtypo1.html
+++ b/hand_gridtypo1.html
@@ -17,28 +17,44 @@
     .wrap {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 12px;
-      padding: 16px;
+      gap: 0;
+      padding: 0;
     }
     .main {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 12px;
+      gap: 0;
     }
     .stage {
       background: #363636;
       border: 1px solid #5e5e5e;
-      border-radius: 10px;
+      border-radius: 0;
       padding: 12px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      box-shadow: none;
+    }
+    .wrap > .stage,
+    .wrap > .main {
+      border: 1px solid #5e5e5e;
+    }
+    .wrap > .main {
+      border-bottom: none;
+    }
+    .wrap > .stage {
+      border-top: 1px solid #5e5e5e;
+    }
+    .main > .stage {
+      border: none;
+    }
+    .main > .stage + .stage {
+      border-left: 1px solid #5e5e5e;
     }
     canvas {
       width: 100%;
       height: auto;
       display: block;
-      border-radius: 8px;
+      border-radius: 0;
       background: #363636;
-      border: 1px solid #5e5e5e;
+      border: none;
     }
     .status {
       font-size: 14px;
@@ -54,7 +70,7 @@
     @media (min-width: 960px) {
       .main {
         grid-template-columns: 1.2fr 0.8fr;
-        align-items: start;
+        align-items: stretch;
       }
     }
   </style>
