--- a/hand_gridtypo1.html
+++ b/hand_gridtypo1.html
@@ -61,6 +61,14 @@
       opacity: 0.8;
       margin-bottom: 8px;
     }
+    .lil-gui {
+      --background-color: #363636;
+      --text-color: #ffffff;
+      --title-background-color: #9f9f9f;
+      --title-text-color: #000000;
+      --number-color: #e8481e;
+      --accent-color: #e8481e;
+    }
     pre {
       margin: 0;
       font-size: 12px;
