--- a/scan_gridtypo3.html
+++ b/scan_gridtypo3.html
@@ -45,6 +45,14 @@
       font-size: 14px;
       opacity: 0.8;
     }
+    .lil-gui {
+      --background-color: #363636;
+      --text-color: #ffffff;
+      --title-background-color: #9f9f9f;
+      --title-text-color: #000000;
+      --number-color: #e8481e;
+      --accent-color: #e8481e;
+    }
     @media (min-width: 960px) {
       .wrap {
         grid-template-columns: 1.2fr 0.8fr;
